# VisionConditionedASRv3

./: README.md  pyproject.toml  requirements.txt
results/speed/babble/cpu/: speed_benchmark.csv  speed_benchmark.txt
results/speed/babble/gpu/: speed_benchmark.csv  speed_benchmark.txt
results/speed/pink/cpu/: speed_benchmark.csv  speed_benchmark.txt
results/speed/pink/gpu/: speed_benchmark.csv  speed_benchmark.txt
results/speed/white/cpu/: speed_benchmark.csv  speed_benchmark.txt
results/speed/white/gpu/: speed_benchmark.csv  speed_benchmark.txt
results/unmatch/babble/: comprehensive_results.json  summary_report.txt
results/unmatch/babble/babble/snr_-10.0dB/: run1_unrelated.csv  run1_unrelated.txt  run1_zerovision.csv  run1_zerovision.txt  run2_unrelated.csv  run2_unrelated.txt  run2_zerovision.txt  run3_unrelated.csv  run3_unrelated.txt  run3_zerovision.txt
results/unmatch/babble/babble/snr_-5.0dB/: run1_unrelated.csv  run1_unrelated.txt  run1_zerovision.txt  run2_unrelated.csv  run2_unrelated.txt  run2_zerovision.txt  run3_unrelated.csv  run3_unrelated.txt  run3_zerovision.txt
results/unmatch/pink/: comprehensive_results.json  summary_report.txt
results/unmatch/white/: comprehensive_results.json  summary_report.txt
results/wer/babble_tuned/: comprehensive_results.json
results/wer/pink_tuned/: comprehensive_results.json
results/wer/white_tuned/: comprehensive_results.json
src/: attention_analysis.py  benchmark_speed.py  dataloader.py  finetune_noise.py  model.py  sample_test.py  test.py  test_speed.py  test_wer.py  train.py  unrelated_test.py
(+952 files in other folders)
