[project]
name = "visionconditionedasrv3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.13"
dependencies = [
    "audiomentations>=0.43.1",
    "jiwer>=4.0.0",
    "librosa>=0.11.0",
    "matplotlib>=3.10.7",
    "numpy>=1.26.4",
    "pillow>=12.0.0",
    "pyctcdecode>=0.5.0",
    "safetensors>=0.7.0",
    "seaborn>=0.13.2",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchcodec>=0.8.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
    "wandb>=0.23.1",
]
